--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "nodejs 2",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "npm run clean && babel src -d target --watch",
+    "compile": "npm run clean && babel src -d target",
+    "clean": "rm -rf target"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,13 @@
   "bugs": {
     "url": "https://github.com/olge100/nodejsl2/issues"
   },
-  "homepage": "https://github.com/olge100/nodejsl2#readme"
+  "homepage": "https://github.com/olge100/nodejsl2#readme",
+  "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0"
+  },
+  "dependencies": {
+    "project-core": "^0.1.3"
+  }
 }
