--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "npm run clean && babel src -d target --watch",
     "compile": "npm run clean && babel src -d target",
-    "clean": "rm -rf target"
+    "clean": "rm -rf target",
+    "dev": "export NODE_ENV=dev && export DEBUG='my:*' && node target/server.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,12 @@
     "babel-preset-stage-0": "^6.5.0"
   },
   "dependencies": {
-    "project-core": "^0.1.3"
+    "body-parser": "^1.15.2",
+    "debug": "^2.2.0",
+    "express": "^4.14.0",
+    "multiparty": "^4.1.2",
+    "project-core": "^0.1.3",
+    "serve-static": "^1.11.1",
+    "validator": "^5.4.0"
   }
 }
