--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "connect-multiparty": "^2.0.0",
     "debug": "^2.2.0",
     "express": "^4.14.0",
-    "multiparty": "^4.1.2",
     "project-core": "^0.1.3",
     "serve-static": "^1.11.1",
     "validator": "^5.4.0"
