--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "project-core": "^0.1.3",
+    "react": "^15.2.1",
+    "react-bootstrap": "^0.29.5",
+    "react-dom": "^15.2.1",
     "serve-static": "^1.11.1",
-    "validator": "^5.4.0"
+    "validator": "^5.4.0",
+    "webpack": "^1.13.1"
   }
 }
